src/ui/shader_code_dialog.css
/**
 * @license
 * Copyright 2025 Google Inc.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.neuroglancer-code-editor-dialog {
  padding: 0 !important;
  outline: 0 !important;
}

.neuroglancer-code-editor-dialog .neuroglancer-shader-code-widget {
  width: 80vw;
  height: 80vh;
}

.neuroglancer-code-editor-dialog-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 1.5rem;
  border-bottom: 1px solid #ccc;
  height: 2rem;
}

.neuroglancer-code-editor-dialog-body {
  padding: 0 1.5rem;
  overflow: auto;
}

.neuroglancer-code-editor-dialog-title {
  margin-right: auto;
  font-size: large;
  font-weight: bold;
  color: #333;
}

.neuroglancer-code-editor-dialog-footer {
  display: flex;
  justify-content: space-between;
  padding: 0.5rem 1.5rem;
  border-top: 1px solid #ccc;
}

.neuroglancer-code-editor-dialog-close-icon {
  background-color: transparent;
  border: none;
  padding: 0;
}

.neuroglancer-code-editor-dialog-close-icon:hover {
  background: none;
}

.neuroglancer-code-editor-dialog-close-icon svg {
  stroke: rgba(20, 20, 21, 0.4);
}

.neuroglancer-shader-code-editor-dialog-close-button {
  margin-left: auto;
  cursor: pointer;
}

.neuroglancer-code-editor-dialog .neuroglancer-single-mesh-attribute-widget {
  max-height: 12vh;
}

